pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-033-entity_and_numeric_character_references.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/033-entity_and_numeric_character_references.md
---
]8;;file://HOSTNAME/ROOT/f%C3%B6%C3%B6\[34mfoo[0m]8;;\
