pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-034-entity_and_numeric_character_references.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/034-entity_and_numeric_character_references.md
---
[32m────────────────────[0m
[33mfoo
[0m[32m────────────────────[0m
